feat(agentcore): restructure project with supervisor agent and terraform modules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,6 @@ dependencies = [
     "strands-agents >= 1.13.0",
     "strands-agents-tools >= 0.2.16"
 ]
+
+[tool.uv.workspace]
+members = ["agents/supervisor"]
