feat(supervisor-agent): add streaming support and enhance configuration

--- a/agents/supervisor/code/.env.example
+++ b/agents/supervisor/code/.env.example
@@ -8,6 +8,9 @@ TEMPERATURE=0.7
 MAX_TOKENS=2048
 AWS_REGION=us-west-2
 
+# AWS Configuration
+# AWS_PROFILE=your-aws-profile-name
+
 # Session Management Configuration
 # Options: "in_memory" (development) or "agentcore_memory" (production)
 SESSION_MODE=in_memory
@@ -18,3 +21,6 @@ CONVERSATION_WINDOW_SIZE=20
 # AgentCore Memory Configuration (only required when SESSION_MODE=agentcore_memory)
 # AGENTCORE_MEMORY_ID=your-memory-id-here
 # AGENTCORE_MEMORY_REGION=us-west-2
+
+# Knowledge Base Configuration
+# KNOWLEDGE_BASE_ID=your-knowledge-base-id-here
